--- a/index.html
+++ b/index.html
@@ -10,5 +10,7 @@
     I am in BTech CSE branch.
 
     I have worked on CLI apps. I'll showcase it here tomorrow.
+
+    I like watching and playing football. I like to do physical tasks.
 </body>
 </html>
